/**
 * Copyright (c) 2026 LottoGame
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */
package com.adam.app.lottogame.repository;

import android.content.Context;
import android.os.Handler;
import android.os.Looper;

import androidx.lifecycle.LiveData;

import com.adam.app.lottogame.Utils;
import com.adam.app.lottogame.data.dao.ILottoHistoryDao;
import com.adam.app.lottogame.data.database.LottoDatabase;
import com.adam.app.lottogame.data.entity.LottoHistoryEntity;

import java.util.ArrayList;
import java.util.List;
import java.util.concurrent.ExecutionException;
import java.util.concurrent.ExecutorService;
import java.util.concurrent.Executors;
import java.util.concurrent.Future;

import javax.inject.Inject;
import javax.inject.Singleton;

import dagger.hilt.android.qualifiers.ApplicationContext;

@Singleton
public class LottoHistoryRepository {

    private static final String TAG = LottoHistoryRepository.class.getSimpleName();

    private final ExecutorService mExecutor;
    private final ILottoHistoryDao mDao;
    private final Handler mHandler;

    @Inject
    public LottoHistoryRepository(ILottoHistoryDao dao) {
        mExecutor = Executors.newSingleThreadExecutor();
        mDao = dao;
        mHandler = new Handler(Looper.getMainLooper());
    }

    /**
     * shutdown
     */
    public void shutdown() {
        mExecutor.shutdown();
    }

    /**
     * add lotto history to database
     *
     * @param entity entity
     */
    public void add(LottoHistoryEntity entity) {
        mExecutor.execute(() -> mDao.upsert(entity));
    }

    /**
     * add all lotto history to database
     *
     * @param list list
     */
    public void addAll(List<LottoHistoryEntity> list) {
        mExecutor.execute(() -> mDao.insertAll(list));
    }

    /**
     * get latest LottoHistoryEntity
     */
    public void getLatest(ResultCallback<LottoHistoryEntity> callback) {
        mExecutor.execute(() -> {
            try {
                LottoHistoryEntity entity = mDao.getLatest();
                mHandler.post(() -> callback.onResult(entity));
            } catch (Exception e) {
                mHandler.post(() -> callback.onError(e));
            }
        });
    }

    /**
     * get all LottoHistoryEntity
     * List<LottoHistoryEntity>
     */
    public Future<List<LottoHistoryEntity>> getAll() {
        return mExecutor.submit(() -> {
            try {
                List<LottoHistoryEntity> list = mDao.getAll();
                Utils.dumpList(list);
                return list;
            } catch (Exception e) {
                Utils.log(TAG, "getAll: " + e.getMessage());
            }
            return null;
        });
    }

    /**
     * get all numbers
     *
     * @return all numbers
     */
    public Future<List<Integer>> getAllNumbers() {
        return mExecutor.submit(() -> {
            try {
                List<Integer> out = new ArrayList<>();
                List<LottoHistoryEntity> list = mDao.getAll();
                Utils.dumpList(list);
                if (list == null) {
                    Utils.log(TAG, "list is null");
                    return out;
                }
                for (LottoHistoryEntity e : list) {
                    out.addAll(e.getNumbers());
                }
                return out;
            } catch (Exception e) {
                Utils.log(TAG, "getAllNumbers: " + e.getMessage());
            }
            return null;
        });
    }

    /**
     * interface ResultCallback
     * <p>
     * Result callback
     */
    public interface ResultCallback<T> {
        void onResult(T result);
        default void onError(Exception e) {
            //TODO: log error
        }
    }

}
